Kubernetes/Production-onpremise/sample-application/wekan/wekan.yaml
---
# Source: wekan/charts/mongodb/templates/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-wekan-mongodb-internal
  labels:
    helm.sh/chart: mongodb-0.7.2
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: my-wekan
    app.kubernetes.io/version: "8.0.4"
    app.kubernetes.io/managed-by: Helm
    service-type: primary-secondary
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 27017
      targetPort: mongodb
      protocol: TCP
      name: mongodb
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: my-wekan
    service-type: primary-secondary
---
# Source: wekan/charts/mongodb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-wekan-mongodb
  labels:
    helm.sh/chart: mongodb-0.7.2
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: my-wekan
    app.kubernetes.io/version: "8.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: mongodb
      protocol: TCP
      name: mongodb
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: my-wekan
---
# Source: wekan/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-wekan
  labels:
    app: wekan
    chart: wekan-8.17.0
    component: wekan
    heritage: Helm
    release: my-wekan
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: wekan
    component: wekan
    release: my-wekan
---
# Source: wekan/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wekan
  labels:
    app: wekan
    chart: wekan-8.17.0
    component: wekan
    release: my-wekan
    heritage: Helm
spec:
  strategy:
  
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: wekan
      component: wekan
      release: my-wekan
  template:
    metadata:
      annotations:
      labels:
        app: wekan
        component: wekan
        release: my-wekan
    spec:
      securityContext:
        {}
      serviceAccountName: my-wekan
      automountServiceAccountToken: false
      containers:
        - name: wekan
          image: "ghcr.io/wekan/wekan:v8.17"
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
          securityContext:
            {}
          
          volumeMounts:
            - name: shared-data-volume
              mountPath: /data
          
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 128Mi
      
      volumes:
      - name: shared-data-volume
        persistentVolumeClaim:
          claimName: my-wekan-shared-data
---
# Source: wekan/charts/mongodb/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-wekan-mongodb
  labels:
    helm.sh/chart: mongodb-0.7.2
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: my-wekan
    app.kubernetes.io/version: "8.0.4"
    app.kubernetes.io/managed-by: Helm
    service-type: primary-secondary
spec:
  serviceName: my-wekan-mongodb-internal
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: my-wekan
      service-type: primary-secondary
  template:
    metadata:
      annotations:
        checksum/customconfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secureconfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/customscripts: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/scripts: 725989b2a1620fc9eec651b6bd2b066541eaaead4e5006c4f7738239f9da2dbc
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/instance: my-wekan
        service-type: primary-secondary
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 999
        supplementalGroups:
        - 999
      containers:
        - name: mongodb
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
          image: "docker.io/mongo:7.0.23"
          imagePullPolicy: IfNotPresent
          command: [ "/extrainitscripts/extra-init.sh" ]
          args:
            - --config
            - /etc/mongo/custom.conf
          ports:
            - name: mongodb
              containerPort: 27017
              protocol: TCP
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - /extrainitscripts/mongoshell --eval "db.adminCommand('ping')"
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
            successThreshold: 1
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - /extrainitscripts/mongoshell --eval "db.adminCommand('ping')"
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - /extrainitscripts/mongoshell --eval "db.adminCommand('ping')"
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: extrainitscripts
              mountPath: /extrainitscripts
            - name: mongodb-volume
              mountPath: /data/db
            - mountPath: /docker-entrypoint-initdb.d
              name: initscripts
            - mountPath: /etc/mongo
              name: configs
      volumes:
        - name: tmp
          emptyDir: {}
        - name: extrainitscripts
          emptyDir: {}
        - name: initscripts
          emptyDir: {}
        - name: configs
          emptyDir: {}
        - name: keyfile
          emptyDir: {}
        - name: scripts
          configMap:
            name: my-wekan-mongodb-scripts
            defaultMode: 0555
  volumeClaimTemplates:
    - metadata:
        name: mongodb-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
---
# Source: wekan/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-wekan
  labels:
    app: wekan
    chart: wekan-8.17.0
    component: wekan
    heritage: Helm
    release: my-wekan
spec:
  rules:
    - host: "wekan.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-wekan
                port:
                  number: 8080
---
# Source: wekan/templates/tests/test-http.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-wekan-test-http"
  labels:
    app: wekan
    chart: wekan-8.17.0
    component: wekan
    release: my-wekan
    heritage: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: "docker.io/busybox:latest"
      command: ['wget', '-O', '/dev/stdout']
      args: ['my-wekan:8080']
  restartPolicy: Never
